--- a/styles/styles.css
+++ b/styles/styles.css
@@ -425,6 +425,16 @@ html {
   height: 0.3rem;
   background-color: #c29525;
 }
+.service {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: all 0.5s ease-in-out;
+}
+
+.service.show {
+  opacity: 1;
+  transform: translateY(0);
+}
 
 .services {
   width: 100%;
